Update .gitignore to exclude IDEA configuration files

--- a/Part3/src/part3.ipynb
+++ b/Part3/src/part3.ipynb
@@ -1184,7 +1184,7 @@
     "    correct = 0\n",
     "    total = 0\n",
     "\n",
-    "    # 训练阶段\n",
+    "    # Training phase\n",
     "    for i in range(0, len(tensor_train), BATCH_SIZE):\n",
     "        inputs = tensor_train[i:i + BATCH_SIZE].to(device)\n",
     "        labels = labels_train_index[i:i + BATCH_SIZE].to(device)\n",
